<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		home_page_for_teacher
	 *	@date 		Wednesday 15th of March 2023 07:21:08 PM
	 *	@title 		Home Page For Teacher
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/home_page_for_teacher" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >



			<RelativeLayout android:id="@+id/page_home_page_for_teacher_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
					android:id="@+id/_bg__home_page_for_teacher_ek2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__home_page_for_teacher_ek2_shape" />

				<ImageView
					android:id="@+id/rectangle_1"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:contentDescription="@string/rectangle_1"
					android:src="@drawable/rectangle_1"
					tools:ignore="ImageContrastCheck" />

				<ImageView
					android:id="@+id/__img___myphoto"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="12dp"
					android:layout_marginTop="212dp"
					android:contentDescription="@string/img_myphoto"
					android:src="@drawable/__img___myphoto" />


				<ImageView
					android:id="@+id/imageView6"
					android:layout_width="57dp"
					android:layout_height="48dp"
					android:layout_alignStart="@+id/__img___myphoto"
					android:layout_alignParentTop="true"
					android:layout_marginStart="34dp"
					android:layout_marginTop="33dp"
					android:layout_marginEnd="12dp"
					android:contentDescription="@string/todo1"
					app:srcCompat="@android:drawable/ic_lock_power_off" />

				<Button
					android:id="@+id/myClassesBtn"
					android:layout_width="124dp"
					android:layout_height="wrap_content"
					android:layout_below="@+id/__img___myphoto"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:layout_marginStart="143dp"
					android:layout_marginTop="155dp"
					android:layout_marginEnd="153dp"
					android:background="@drawable/round_btn"
					android:text="@string/my_classes_string"
					tools:ignore="TextContrastCheck" />

				<TextView
					android:id="@+id/myhello_"
					android:layout_width="91dp"
					android:layout_height="32dp"
					android:layout_marginStart="131dp"
					android:layout_marginTop="148dp"
					android:text="@string/myhello__string"
					android:textColor="@color/sign_up_ek4_color"
					android:textSize="24sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/myteacher"
					android:layout_width="115dp"
					android:layout_height="32dp"
					android:layout_marginStart="196dp"
					android:layout_marginTop="148dp"
					android:text="@string/myteacher_string"
					android:textColor="@color/sign_up_ek4_color"
					android:textSize="24sp"
					android:textStyle="bold" />

				<ImageView
					android:id="@+id/notification"
					android:layout_width="29dp"
					android:layout_height="31dp"
					android:layout_marginStart="345dp"
					android:layout_marginTop="44dp"
					android:contentDescription="@string/myvector"
					android:src="@drawable/myvector" />

			</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>